# django-ninja-example

./: Dockerfile  environment.yml  pyproject.toml  requirements.txt
authentication/: models.py  schema.py  tests.py  views.py
authentication/migrations/: 0001_initial.py
config/: authenticator.py  settings.py  urls.py
